<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:text="@string/lbl_profile"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/layoutImg"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_launcher_background"
        app:cardCornerRadius="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/user" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/lbl_john"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/layoutImg"
        app:strokeWidth="0.1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpload"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/lbl_upload"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/btnName"
        app:strokeWidth="0.1dp" />

    <LinearLayout
        android:id="@+id/layoutShare"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/btnUpload">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/lbl_share"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:strokeWidth="0.1dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/lbl_contact_us"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:strokeWidth="0.1dp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAbout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/lbl_about_us"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/layoutShare"
        app:strokeWidth="0.1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="40dp"
        android:text="@string/lbl_logout"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAbout"
        app:strokeWidth="0.1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>